<resources>
    <string name="app_name">BoadMe</string>
    <string name="owner_name">Owner Name</string>
    <string name="owner_name_edit" />
    <string name="hostal_location_edit" />
    <string name="phone_num">Phone Number</string>
    <string name="phone_num_edit" />
    <string name="owner_email">Email</string>
    <string name="owner_email_edit" />
    <string name="address">Address</string>
    <string name="address_edit" />
    <string name="number_of_room">Number of Room</string>
    <string name="number_of_room_edit" />
    <string name="price">Price</string>
    <string name="price_edit" />
    <string name="name" />
    <string name="Hint1">Name</string>
    <string name="contact" />
    <string name="Hint2">"Mobile  number and email address "</string>
    <string name="age" />
    <string name="Hint3">Age</string>
    <string name="gender">Gender</string>
    <string name="submit">Submit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_booking">Add Booking Application</string>
    <string name="name_1" />
    <string name="Hint4">Name</string>
    <string name="contact_1" />
    <string name="Hint5">"Mobile Number or email address "</string>
    <string name="Hint6">Age</string>
    <string name="age_1" />
    <string name="gender_1">Gender</string>
    <string name="male_1">Male</string>
    <string name="female_1">Female</string>
    <string name="update">Update</string>
    <string name="booking_profile">Booking Profile</string>
    <string name="List_name" />
    <string name="add_book">ADD</string>
    <string name="gen" />
    <string name="Hint7">Gender</string>
    <string name="Hint8">Gender</string>
    <string name="gen01" />
</resources>
